# cloudchor

./: .gitignore  LICENSE-HasChor.txt  README.md  cabal.project  cloud-backend-recommendation.md  cloudchor.cabal
bench/: Benchmark.hs  Main.hs
bench/Choreos/: Bookseller.hs  CleanRoom.hs  Kvs.hs
benchmark/: Benchmark.hs  Main.hs  cloudchor-benchmark.cabal
benchmark/Choreos/: Kvs.hs
examples/: cloudchor-examples.cabal
examples/HasChor/bank-2pc/: Main.hs  README.md
examples/HasChor/bookseller-0-network/: Main.hs  README.md
examples/HasChor/bookseller-1-simple/: Main.hs  README.md
examples/HasChor/bookseller-2-higher-order/: Main.hs  README.md
examples/HasChor/bookseller-3-loc-poly/: Main.hs  README.md
examples/HasChor/diffiehellman/: Main.hs  README.md
examples/HasChor/karatsuba/: Main.hs  README.md  Reference.hs
examples/HasChor/kvs-1-simple/: Main.hs  README.md
examples/HasChor/kvs-2-primary-backup/: Main.hs  README.md
examples/HasChor/kvs-3-higher-order/: Main.hs  README.md
examples/HasChor/kvs-4-loc-poly/: Main.hs  README.md
examples/HasChor/mergesort/: Main.hs  README.md
examples/HasChor/playground/: Main.hs  README.md
examples/HasChor/quicksort/: Main.hs  README.md  Reference.hs
examples/HasChor/ring-leader/: Main.hs  README.md
examples/clean-room/: Main.hs  README.md
examples/clean-room-gcp/: Main.hs  README.md  deploy.sh
examples/unsoundness/: Main.hs  README.md
paper/: Towards Lightweight and Efficient Choreographic Cloud Services.pdf.license
src/: Choreography.hs
src/Choreography/: Choreo.hs  Location.hs  Network.hs
src/Choreography/Location/: Multi.hs
src/Choreography/Network/: Http.hs  Local.hs  LocalMsgCount.hs  PubSub.hs
src/Control/Monad/: Freer.hs
