cabal-version: 3.8

-- SPDX-FileCopyrightText: 2025 Alex Ionescu
-- SPDX-License-Identifier: MPL-2.0

name: cloudchor
version: 0.1.0.1
synopsis: Lightweight and efficient choreographic programming for cloud services
description: Please see the README on GitHub at <https://github.com/aionescu/cloudchor#readme>
category: Concurrency

homepage: https://github.com/aionescu/cloudchor
bug-reports: https://github.com/aionescu/cloudchor/issues

author: Alex Ionescu
maintainer: Alex Ionescu <hackage@ionescu.sh>
copyright: Copyright (C) 2025 Alex Ionescu

license: MPL-2.0
license-files:
  LICENSES/MPL-2.0.txt
  LICENSES/BSD-3-Clause.txt

build-type: Simple
extra-doc-files: README.md

tested-with:
  GHC == 9.10.3
  GHC == 9.8.4

source-repository head
  type: git
  location: https://github.com/aionescu/cloudchor

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-type-defaults
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

library
  import: warnings
  default-language: GHC2021
  hs-source-dirs: src

  exposed-modules:
    Choreography
    Choreography.Choreo
    Choreography.Location
    Choreography.Location.Multi
    Choreography.Network
    Choreography.Network.Http
    Choreography.Network.Local
    Choreography.Network.LocalMsgCount
    Control.Monad.Freer

  build-depends:
    base                   >= 4.16 && < 4.21
    , containers           >= 0.6  && < 0.7
    , http-client          >= 0.7  && < 0.8
    , mtl                  >= 2.3  && < 2.4
    , servant              >= 0.19 && < 0.21
    , servant-client       >= 0.19 && < 0.21
    , servant-server       >= 0.19 && < 0.21
    , sop-core             >= 0.5  && < 0.6
    , template-haskell     >= 2.18 && < 2.23
    , unordered-containers >= 0.2  && < 0.3
    , warp                 >= 3.3  && < 3.4
