cabal-version: 3.8

-- SPDX-FileCopyrightText: 2025 Alex Ionescu
-- SPDX-License-Identifier: MPL-2.0

name: cloudchor-examples
version: 0.0.0.0

build-type: Simple

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-type-defaults
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

executable clean-room
  import: warnings
  default-language: GHC2021
  hs-source-dirs: clean-room
  main-is: Main.hs

  build-depends:
    base         >= 4.16 && < 4.21
    , random     >= 1.2  && < 1.3
    , sop-core   >= 0.5  && < 0.6
    , cloudchor

executable unsoundness
  import: warnings
  default-language: GHC2021
  hs-source-dirs: unsoundness
  main-is: Main.hs

  build-depends:
    base             >= 4.16 && < 4.21
    , http-client    >= 0.7  && < 0.8
    , servant        >= 0.19 && < 0.21
    , servant-client >= 0.19 && < 0.21
    , servant-server >= 0.19 && < 0.21
    , warp           >= 3.3  && < 3.4
    , cloudchor

executable HasChor-bank-2pc
  default-language: GHC2021
  hs-source-dirs: HasChor/bank-2pc
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , split     >= 0.2  && < 0.3
    , time      >= 1.11 && < 1.13
    , cloudchor

executable HasChor-bookseller-0-network
  default-language: GHC2021
  hs-source-dirs: HasChor/bookseller-0-network
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , time      >= 1.11 && < 1.13
    , cloudchor

executable HasChor-bookseller-1-simple
  default-language: GHC2021
  hs-source-dirs: HasChor/bookseller-1-simple
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , time      >= 1.11 && < 1.13
    , cloudchor

executable HasChor-bookseller-2-higher-order
  default-language: GHC2021
  hs-source-dirs: HasChor/bookseller-2-higher-order
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , time      >= 1.11 && < 1.13
    , cloudchor

executable HasChor-bookseller-3-loc-poly
  default-language: GHC2021
  hs-source-dirs: HasChor/bookseller-3-loc-poly
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , time      >= 1.11 && < 1.13
    , cloudchor

executable HasChor-diffiehellman
  default-language: GHC2021
  hs-source-dirs: HasChor/diffiehellman
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , random    >= 1.2  && < 1.3
    , time      >= 1.11 && < 1.13
    , cloudchor

executable HasChor-karatsuba
  default-language: GHC2021
  hs-source-dirs: HasChor/karatsuba
  main-is: Main.hs

  build-depends:
    base         >= 4.16 && < 4.21
    , async      >= 2.2  && < 2.3
    , containers >= 0.6  && < 0.7
    , cloudchor

executable HasChor-kvs1
  default-language: GHC2021
  hs-source-dirs: HasChor/kvs-1-simple
  main-is: Main.hs

  build-depends:
    base         >= 4.16 && < 4.21
    , containers >= 0.6  && < 0.7
    , time       >= 1.11 && < 1.13
    , cloudchor

executable HasChor-kvs2
  default-language: GHC2021
  hs-source-dirs: HasChor/kvs-2-primary-backup
  main-is: Main.hs

  build-depends:
    base         >= 4.16 && < 4.21
    , containers >= 0.6  && < 0.7
    , time       >= 1.11 && < 1.13
    , cloudchor

executable HasChor-kvs3
  default-language: GHC2021
  hs-source-dirs: HasChor/kvs-3-higher-order
  main-is: Main.hs

  build-depends:
    base         >= 4.16 && < 4.21
    , containers >= 0.6  && < 0.7
    , time       >= 1.11 && < 1.13
    , cloudchor

executable HasChor-kvs4
  default-language: GHC2021
  hs-source-dirs: HasChor/kvs-4-loc-poly
  main-is: Main.hs

  build-depends:
    base         >= 4.16 && < 4.21
    , containers >= 0.6  && < 0.7
    , time       >= 1.11 && < 1.13
    , cloudchor

executable HasChor-mergesort
  default-language: GHC2021
  hs-source-dirs: HasChor/mergesort
  main-is: Main.hs

  ghc-options:
    -Wno-x-partial

  build-depends:
    base         >= 4.16 && < 4.21
    , containers >= 0.6  && < 0.7
    , time       >= 1.11 && < 1.13
    , cloudchor

executable HasChor-quicksort
  default-language: GHC2021
  hs-source-dirs: HasChor/quicksort
  main-is: Main.hs

  ghc-options:
    -Wno-x-partial

  build-depends:
    base         >= 4.16 && < 4.21
    , async      >= 2.2  && < 2.3
    , containers >= 0.6  && < 0.7
    , time       >= 1.11 && < 1.13
    , cloudchor

executable HasChor-ring-leader
  default-language: GHC2021
  hs-source-dirs: HasChor/ring-leader
  main-is: Main.hs

  build-depends:
    base           >= 4.16 && < 4.21
    , transformers >= 0.5  && < 0.7
    , cloudchor

executable HasChor-playground
  default-language: GHC2021
  hs-source-dirs: HasChor/playground
  main-is: Main.hs

  build-depends:
    base        >= 4.16 && < 4.21
    , cloudchor
